# odo

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  build.rs  file.txt  sample.org  structure.md  test.org  tree.txt  whami.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: mdbook.yml  release.yml
context/: editor-project-context.md
docs/: advanced_undo_design.md  book.toml  crate_architecture.md  crate_refactoring_plan.md  editor_core_api.md  implementation_plan.md  org_motions_implementation.md  undo_crate_design.md  vim_command_implementation.md  workspace_migration_plan.md  workspace_setup_guide.md
docs/src/: SUMMARY.md  introduction.md
docs/theme/: custom.css
src/: document.rs  editor.rs  filetype.rs  main.rs  row.rs  terminal.rs  treesitter.rs
src/core/: document.rs  filetype.rs  highlighting.rs  mod.rs  position.rs  row.rs  search.rs
src/editor/: command.rs  editor_interface.rs  mod.rs  mode.rs  status_message.rs
src/ui/: mod.rs
src/ui/common/: mod.rs  theme.rs  ui_interface.rs
src/ui/gui/: mod.rs
src/ui/terminal/: mod.rs  terminal.rs  terminal_editor.rs
