[package]
name = "orgonaut"
version = "0.2.0"
edition = "2024"
description = "A standalone Org-mode editor written in Rust, inspired by both Vim and Emacs"
authors = ["Orgonaut Contributors"]
license = "MIT"
repository = "https://github.com/jwliles/orgonaut"
readme = "README.md"
keywords = ["org-mode", "emacs", "vim", "outliner", "terminal"]
categories = ["text-editors", "command-line-utilities"]

[dependencies]
crossterm = "0.28.1"
termion = "4.0.5"
unicode-segmentation = "1.12.0"
