[package]
name = "NeoOrg"
version = "0.2.0"
edition = "2024"
description = "A standalone Org-mode editor written in Rust, inspired by both Vim and Emacs"
authors = ["NeoOrg Contributors"]
license = "MIT"
repository = "https://github.com/jwliles/NeoOrg"
readme = "README.md"
keywords = ["org-mode", "emacs", "vim", "outliner", "terminal"]
categories = ["text-editors", "command-line-utilities"]

[dependencies]
crossterm = "0.28.1"
termion = "4.0.5"
unicode-segmentation = "1.12.0"
tree-sitter = "0.20.10"

[build-dependencies]
cc = "1.0.83"
